GNOME Bugzilla – Bug 738455
Linking fails with undefined reference to 'XRenderFindStandardFormat'
Last modified: 2014-10-13 13:15:46 UTC
The fix to bug 736817 introduced a dependency on cairo-xlib-xrender (and eventually, libXrender), but did not explicitly link with it. This causes problems with some linkers, such as gold, as the implicit linking to cairo via GTK+ is not sufficient to link against libXRender, and leads to linker errors: CCLD libwnck-3.la CCLD wnckprop CCLD wnck-urgency-monitor CCLD test-pager CCLD test-wnck ./.libs/libwnck-3.so: error: undefined reference to 'XRenderFindStandardFormat' collect2: error: ld returned 1 exit status Makefile:746: recipe for target 'wnck-urgency-monitor' failed make[2]: *** [wnck-urgency-monitor] Error 1 make[2]: *** Waiting for unfinished jobs.... It is more correct to use the cairo-xlib-xrender pkg-config file to ensure linking to the correct libraries.
Created attachment 288383 [details] [review] use the cairo-xlib-xrender pkg-config file Fixes the linker error for me
Review of attachment 288383 [details] [review]: Looks good, thanks!