xutils: Correctly link against libXrender

If using cairo-xlib-xrender functions (and especially XRender
functions), use the libraries from the cairo-xlib-xrender pkg-config
file explicitly rather than relying on implicit linking. Avoids linker
errors regarding an undefined reference to XRenderFindStandardFormat.

https://bugzilla.gnome.org/show_bug.cgi?id=738455